# todo

./: .env  .gitignore  mypy.ini  pyproject.toml  ruff.toml
src/: main.py  routers.py
src/core/: auth.py  config.py  exception_handler.py
src/core/base/repository/: __init__.py  base_repository.py
src/core/db/: __init__.py  connection.py  helpers.py  initialize_db.py
src/core/depedencies/: __init__.py  authentication.py  query_param.py
src/core/error/: codes.py  exceptions.py  format_error.py
src/core/flash/: __init__.py
src/core/html_renderer/: __init__.py
src/core/logger/: __init__.py  logger.py
src/core/middleware/: __init__.py  custom_exceptions_handler.py  error_handler.py  validation.py
src/core/models/: __init__.py  base_model.py
src/core/repository/: base.py
src/core/schemas/: common.py
src/core/security/: __init__.py  jwt_handler.py  password_handler.py
src/core/service/: base_service.py
src/modules/auth/: schemas.py  ssr_routers.py
src/modules/auth/controllers/: __init__.py  user.py
src/modules/auth/services/: __init__.py  user.py
src/modules/home/controllers/: home.py
src/modules/todos/: models.py  repository.py  schemas.py  ssr_routers.py
src/modules/todos/controllers/: __init__.py  todos.py  user.py
src/modules/todos/services/: todos.py  (+1 more)
src/modules/users/: models.py  repository.py  schemas.py
src/templates/: base.html
src/templates/auth/: login.html  signup.html
src/templates/home/: index.html
src/templates/pages/: index.html
src/templates/partials/: messages.html
src/templates/todo/: list.html  todo.html
(+2 files in other folders)
