[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.0",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
]
