[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.13",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.10.0",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.41",
]
